--- a/WCF_HttpsWinService.csproj
+++ b/WCF_HttpsWinService.csproj
@@ -10,8 +10,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WCFSSL_Project</RootNamespace>
-    <AssemblyName>WCFSSL_Project</AssemblyName>
+    <RootNamespace>WCF_HttpsWinService</RootNamespace>
+    <AssemblyName>WCF_HttpsWinService</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <WcfConfigValidationEnabled>True</WcfConfigValidationEnabled>
     <UseIISExpress>true</UseIISExpress>
