--- a/app.config
+++ b/app.config
@@ -11,18 +11,18 @@
         </binding>
       </wsHttpBinding>
     </bindings>
-    <services>      
-      <service name="WCFSSL_Project.Service1" behaviorConfiguration="WCFWinServiceBehavior">
+    <services>
+      <service behaviorConfiguration="WCFWinServiceBehavior" name="WCF_HttpsWinService.Service1">
+        <endpoint address="" binding="mexHttpsBinding" contract="WCF_HttpsWinService.IService1" />
+        <endpoint address="mex" binding="mexHttpsBinding" contract="IMetadataExchange" />
+        <endpoint address="" binding="mexHttpBinding" contract="WCF_HttpsWinService.IService1" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="https://localhost:10443/WCF_HttpsWinService/service1"/>
-            <add baseAddress="http://localhost:10010/WCF_HttpsWinService/service1"/>
+            <add baseAddress="https://localhost:10443/WCF_HttpsWinService/service1" />
+            <add baseAddress="http://localhost:10010/WCF_HttpsWinService/service1" />
           </baseAddresses>
         </host>
-        <endpoint address="" binding="mexHttpsBinding" contract="WCFSSL_Project.IService1"/>
-        <endpoint address="mex" binding="mexHttpsBinding" contract="IMetadataExchange"/>
-      <endpoint address="" binding="mexHttpBinding" contract="WCFSSL_Project.IService1"></endpoint>
-      <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"></endpoint>
       </service>
     </services>
     <behaviors>
@@ -31,7 +31,7 @@
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
           <serviceDebug includeExceptionDetailInFaults="False"/>
           <serviceCredentials>
-            <serviceCertificate storeLocation="LocalMachine" storeName="My" x509FindType="FindBySerialNumber" findValue="4c7f078b100550b4466fcb6a99489888"/>
+            <serviceCertificate storeLocation="LocalMachine" storeName="My" x509FindType="FindBySerialNumber" findValue="e50ac104bd00779e4bbd03e0724056fe"/>
           </serviceCredentials>
         </behavior>
       </serviceBehaviors>
