--- a/WCF_HttpsWinService/WCF_HttpsWinService.csproj
+++ b/WCF_HttpsWinService/WCF_HttpsWinService.csproj
@@ -94,7 +94,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="cert\WCF_HttpsWinService.pfx" />
+    <Content Include="cert\WCF_HttpsWinService.pfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
