--- a/WCF_HttpsWinService/WCF_HttpsWinService.csproj
+++ b/WCF_HttpsWinService/WCF_HttpsWinService.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="cert_pfx\HtmlPage1.html" />
     <Content Include="WCF_HttpsWinService.txt" />
     <Content Include="Service1.svc" />
   </ItemGroup>
