--- a/WCF_HttpsWinService/WCF_HttpsWinService.csproj
+++ b/WCF_HttpsWinService/WCF_HttpsWinService.csproj
@@ -95,7 +95,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="cert_pfx\WCF_HttpsWinService.pfx">
+    <Content Include="cert_pfx\WCF_HttpsWinService.pfx.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
